<resources>
    <string name="app_name">Zentello</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCyCKDT0LVg3kkQ6EXMZrD5tldKyvRhrdw
    </string>


    <!-- Login and Register -->
    <string name="hint_email">Email*</string>
    <string name="hint_phone">Mobile No.*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_name">First Name*</string>
    <string name="hint_franchisee_name">Franchisee Name*</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_link_to_register_guideline">Not a member ?</string>
    <string name="btn_link_to_register">Sign up.</string>
    <string name="btn_link_to_login_guideline">Already Registered !!!</string>
    <string name="btn_link_to_login">Login Me.</string>
    <string name="show_password">Show Password </string>
    <string name="btn_link_to_set_loc">Click to set your business location</string>
    <string name="welcome">Welcome</string>
    <string name="join_us">Join Us</string>
    <string name="sign_in">Sign In</string>


    <!--Parcel Details -->
    <string name="hint_booking_date">Booking Date* (DD-MM-YYYY)</string>
    <string name="hint_weight">Weight* (in kgs)</string>
    <string name="hint_length">L* (cm)</string>
    <string name="hint_width">W* (cm)</string>
    <string name="hint_height">H* (cm)</string>
    <string name="hint_mode">Mode* (Surface /Air)</string>


</resources>
