<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="PARCEL DETAILS"
        android:textColor="@color/maroon"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded_square_holder"
        android:layout_margin="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/booking_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/booking_date_edit"
            android:text="02-06-2017"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_booking_date"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/weight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/weight_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_weight"
            android:textColorHint="@color/colorPrimary"
            android:text="34"
            />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/length_layout"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/length_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_length"

                android:text="40"
                android:textColorHint="@color/colorPrimary"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/width_layout"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/width_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_width"
                android:text="30"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/height_layout"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/height_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_height"
                android:text="20"
                android:textColorHint="@color/colorPrimary"
                />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mode_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mode"
            android:textColorHint="@color/colorPrimary"
            android:text="Air"
            />
    </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>

    <Button
        android:id="@+id/save_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="SAVE"
        android:background="@drawable/buttons_bg"/>


</LinearLayout>