<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/reg_login_header_bg"
            android:scaleType="centerCrop"
            android:id="@+id/reg_bg"
            android:layout_centerInParent="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA000000"
            android:layout_centerInParent="true"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/reg_login_header_text_bg"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            android:layout_marginBottom="120dp">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/bg_circle_orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  RISE.  SHINE.  REACH.  OFFER.  DESTINY  "
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/bg_circle_orange" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/reg_login_header_text_bg"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            android:layout_marginBottom="80dp">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/bg_circle_orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  RISE.  SHINE.  REACH  "
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/bg_circle_orange" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-30dp"
            android:orientation="vertical"
            android:background="@drawable/reg_login_bubble_header"
            android:gravity="center_horizontal|top"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/zentello_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_us"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:padding="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/reg_direction"
                android:layout_marginTop="-8dp"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:id="@+id/reg_layout">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/white"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginBottom="2dp">
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_marginRight="2.5dp"
                        android:layout_marginLeft="2.5dp"
                        android:layout_height="wrap_content"
                        android:text="Franchisee"
                        android:id="@+id/i_am_franchisee"
                        />
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_marginLeft="2.5dp"
                        android:layout_marginRight="2.5dp"
                        android:layout_height="wrap_content"
                        android:text="Customer"
                        android:id="@+id/i_am_customer"
                        />

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/text_input_layout_bg"
                    android:padding="4dp"
                    android:textColorHint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/rEditFName"
                        android:text="Shweta Kumar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:padding="4dp"
                        android:textColorHint="@color/colorPrimary"
                        android:background="@drawable/reg_login_text_edit_bg"
                        />
                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="4dp"
                    android:background="@drawable/text_input_layout_bg"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rEditEmail"
                        android:text="kumar.miki@gmail.com"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="4dp"
                        android:background="@drawable/reg_login_text_edit_bg"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="4dp"
                    android:background="@drawable/text_input_layout_bg"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rEditPhone"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:padding="4dp"
                        android:text="7207700480"
                        android:background="@drawable/reg_login_text_edit_bg"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/text_input_layout_bg"
                    android:padding="4dp"
                    android:textColorHint="@color/colorPrimary"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rEditPassword"
                        android:hint="@string/hint_password"
                        android:padding="4dp"
                        android:text="String3e@"
                        android:inputType="textPassword"
                        android:background="@drawable/reg_login_text_edit_bg" />
                </android.support.design.widget.TextInputLayout>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_password_btn"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="-6dp"
                    android:background="@android:color/transparent"
                    android:text="@string/show_password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>
        </ScrollView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:layout_marginTop="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/register_button"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/btnRegister"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_link_to_login_guideline"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:typeface="serif"
            android:layout_marginRight="5dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLinkToLoginScreen"
            android:background="@android:color/transparent"
            android:text="@string/btn_link_to_login"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:onClick="gotoLogin"
            android:typeface="serif"
            />

    </LinearLayout>




</LinearLayout>